--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -31,29 +31,117 @@
                     <input type="radio" name="q1" value="2"> Entre 1 e 5 anos<br>
                     <input type="radio" name="q1" value="3"> Mais de 5 anos<br>
                 </li>
+                
+                <!-- Pergunta 2 -->
                 <li>
                     <p>2. Qual é a sua reação imediata quando o valor dos seus investimentos diminui significativamente em um curto período de tempo?</p>
                     <input type="radio" name="q2" value="1"> Fico extremamente preocupado e considero vender imediatamente para evitar mais perdas.<br>
                     <input type="radio" name="q2" value="2"> Fico um pouco preocupado, mas mantenho a calma e espero para ver se a situação melhora.<br>
                     <input type="radio" name="q2" value="3"> Vejo isso como uma oportunidade de comprar mais enquanto os preços estão baixos.<br>
                 </li>
+
+                <!-- Pergunta 3 -->
                 <li>
                     <p>3. Qual porcentagem do seu patrimônio total você estaria disposto a investir em ativos de maior risco, como ações ou criptomoedas?</p>
                     <input type="radio" name="q3" value="1"> Menos de 10%<br>
                     <input type="radio" name="q3" value="2"> Entre 10% e 50%<br>
                     <input type="radio" name="q3" value="3"> Mais de 50%<br>
                 </li>
+
+                <!-- Pergunta 4 -->
                 <li>
-                    <p>4. Como você se sentiria se uma grande parte dos seus investimentos fossem perdidos em um ano?</p>
+                    <p>4. Como você se sentiria se uma grande parte dos seus investimentos fosse perdida em um ano?</p>
                     <input type="radio" name="q4" value="1"> Arruinado financeiramente e emocionalmente.<br>
                     <input type="radio" name="q4" value="2"> Desapontado, mas continuaria seguindo em frente.<br>
                     <input type="radio" name="q4" value="3"> Encararia como parte do jogo e buscaria oportunidades para recuperar as perdas.<br>
                 </li>
+
+                <!-- Pergunta 5 -->
                 <li>
                     <p>5. Qual é o seu conhecimento sobre o mercado financeiro e investimentos?</p>
-                    <input type="radio" name="q5" value="1"> Limitado, apenas o básico.<br>
+                    <input type="radio" name="q5" value="1"> Limitado, conheço apenas o básico.<br>
                     <input type="radio" name="q5" value="2"> Tenho um entendimento médio sobre investimentos e estou disposto a aprender mais.<br>
                     <input type="radio" name="q5" value="3"> Possuo um conhecimento avançado e estou sempre atualizado sobre o mercado.<br>
+                </li>
+
+                <!-- Pergunta 6 -->
+                <li>
+                    <p>6. Qual é o seu objetivo principal com o projeto de vida?</p>
+                    <input type="radio" name="q6" value="1"> Meu principal objetivo com o projeto de vida é alcançar estabilidade financeira para garantir segurança a longo prazo.<br>
+                    <input type="radio" name="q6" value="2"> Meu objetivo principal é construir uma carreira significativa, onde eu possa fazer uma diferença positiva no mundo.<br>
+                    <input type="radio" name="q6" value="3"> O foco do meu projeto de vida é encontrar equilíbrio entre trabalho e vida pessoal, para viver de forma saudável e feliz.<br>
+                </li>
+
+                <!-- Pergunta 7 -->
+                <li>
+                    <p>7. Quais são as suas metas de curto, médio e longo prazo?</p>
+                    <input type="radio" name="q7" value="1"> Minha meta é me tornar mais competente em minha profissão, buscar promoções e construir uma carreira sólida nos próximos anos.<br>
+                    <input type="radio" name="q7" value="2"> Pretendo focar em melhorar minha saúde e bem-estar, adotando um estilo de vida mais saudável e equilibrado.<br>
+                    <input type="radio" name="q7" value="3"> Quero aumentar minha estabilidade financeira, criando um fundo de emergência e planejando a aposentadoria.<br>
+                </li>
+
+                <!-- Pergunta 8 -->
+                <li>
+                    <p>8. Quais são as suas habilidades e competências?</p>
+                    <input type="radio" name="q8" value="1"> Liderança, comunicação e trabalho em equipe.<br>
+                    <input type="radio" name="q8" value="2"> Criatividade, inovação e pensamento crítico.<br>
+                    <input type="radio" name="q8" value="3"> Adaptabilidade, resiliência e aprendizado contínuo.<br>
+                </li>
+
+                <!-- Pergunta 9 -->
+                <li>
+                    <p>9. Quais são os seus valores e crenças que podem influenciar no seu projeto de vida?</p>
+                    <input type="radio" name="q9" value="1"> Integridade, honestidade e responsabilidade.<br>
+                    <input type="radio" name="q9" value="2"> Empatia, respeito e inclusão.<br>
+                    <input type="radio" name="q9" value="3"> Liberdade, autonomia e autenticidade.<br>
+                </li>
+
+                <!-- Pergunta 10 -->
+                <li>
+                    <p>10. Quais são as suas dificuldades e desafios que podem afetar o seu planejamento?</p>
+                    <input type="radio" name="q10" value="1"> Falta de tempo, recursos e apoio.<br>
+                    <input type="radio" name="q10" value="2"> Ansiedade, estresse e incerteza.<br>
+                    <input type="radio" name="q10" value="3"> Mudanças, transições e adversidades.<br>
+                </li>
+
+                <!-- Pergunta 11 -->
+                <li>
+                    <p>11. Quais as suas estratégias para superar as dificuldades e desafios?</p>
+                    <input type="radio" name="q11" value="1"> Minha estratégia para superar desafios é manter uma atitude positiva e resiliente, buscando soluções criativas para os problemas que surgem.<br>
+                    <input type="radio" name="q11" value="2"> Eu costumo enfrentar dificuldades com planejamento e preparação. Faço listas de tarefas e estabeleço metas claras para manter o foco.<br>
+                    <input type="radio" name="q11" value="3"> Para superar desafios, eu valorizo o apoio de uma rede de contatos forte, seja com colegas de trabalho, mentores ou familiares, sempre buscando conselhos e diferentes perspectivas.<br>
+                </li>
+
+                <!-- Pergunta 12 -->
+                <li>
+                    <p>12. Quais são as suas metas para o futuro?</p>
+                    <input type="radio" name="q12" value="1">Minhas metas para o futuro incluem alcançar estabilidade financeira, continuar crescendo profissionalmente e construir uma vida equilibrada entre trabalho e lazer.<br>
+                    <input type="radio" name="q12" value="2">Meu objetivo para o futuro é expandir minhas habilidades e conhecimento, assumir papéis de liderança e contribuir para projetos significativos que façam a diferença na sociedade.<br>
+                    <input type="radio" name="q12" value="3"> Planejo estabelecer um estilo de vida que priorize a saúde, a família e o bem-estar, enquanto busco novas experiências e viagens para enriquecer minha vida pessoal e profissional.<br>
+                </li>
+
+                <!-- Pergunta 13 -->
+                <li>
+                    <p>13. Como você pretende medir o desenvolvimento do seu planejamento?</p>
+                    <input type="radio" name="q13" value="1"> Pretendo medir o desenvolvimento do meu planejamento por meio de metas específicas e mensuráveis, acompanhando meu progresso em intervalos regulares para garantir que estou no caminho certo.<br>
+                    <input type="radio" name="q13" value="2">Vou utilizar indicadores-chave de desempenho que me permitam avaliar de forma objetiva meu avanço em relação aos objetivos estabelecidos.<br>
+                    <input type="radio" name="q13" value="3">Por meio de avaliações periódicas, ajustando estratégias conforme necessário e buscando feedback de mentores ou especialistas para garantir que estou progredindo conforme o esperado.<br>
+                </li>
+
+                <!-- Pergunta 14 -->
+                <li>
+                    <p>14. Quais são as suas fontes de inspiração e motivação?</p>
+                    <input type="radio" name="q14" value="1"> Livros, cursos e mentores.<br>
+                    <input type="radio" name="q14" value="2"> Família, amigos e comunidade.<br>
+                    <input type="radio" name="q14" value="3"> Natureza, arte e criatividade.<br>
+                </li>
+
+                <!-- Pergunta 15 -->
+                <li>
+                    <p>15. Como você pretende manter-se focado e motivado?</p>
+                    <input type="radio" name="q15" value="1"> Estabelecendo metas, planos e prioridades para minha vida pessoal e financeira.<br>
+                    <input type="radio" name="q15" value="2"> Praticando hábitos, rotinas e ritmos que me ajudem não sair do caminho.<br>
+                    <input type="radio" name="q15" value="3"> Cultivando paixão, propósito e significado.<br>
                 </li>
             </ol>
             <button type="button" onclick="calculateProfile()">Calcular Perfil</button>
