--- a/Linvest/Poupança/poupança.html
+++ b/Linvest/Poupança/poupança.html
@@ -4,45 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="poupança.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="poupança.css">
     <title>Poupança - Linvest</title>
-    
-    <body>
-        <header>
-            <h1>Poupança - Linvest</h1>
-        </header>
-        <!-- Botão para abrir o menu de navegação -->
-        <button class="nav-btn" onclick="toggleNav()">☰</button>
-        <!-- Menu de navegação lateral -->
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-            <a href="../PRINCIPAL/principal.html">Início</a>
-            <a href="../Teste de QI/qi.html">Teste de QI</a>
-            <a href="../Suporte/suporte.html">Suporte</a>
+</head>
+<body>
+    <header>
+        <h1>Poupança - Linvest</h1>
+    </header>
+    <!-- Botão para abrir o menu de navegação -->
+    <button class="nav-btn" onclick="toggleNav()">☰</button>
+    <!-- Menu de navegação lateral -->
+     <!-- Botão para abrir o menu de navegação -->
+     <button class="nav-btn" onclick="toggleNav()" >☰</button>
+     <!-- Menu de navegação lateral -->
+     <div id="mySidenav" class="sidenav">
+         <script src="./etfs.js"></script>
+         <link rel="stylesheet" href="etfs.css">
+         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
+         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
+         <button class="ves"><a href="../Teste de QI/qi.html" id="ves" >Teste de Investidor</a></button>
+         <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
+     </div>
+    <!-- Conteúdo principal -->
+    <div class="container">
+        <div class="section-container">
+            <h2>Investindo na Poupança</h2>
+            <p>A poupança é uma forma de investimento oferecida por bancos que oferece liquidez diária e isenção de imposto de renda para pessoas físicas. Embora seja uma opção de investimento conservadora, sua rentabilidade pode ser baixa em comparação com outras alternativas de renda fixa.</p>
         </div>
-        <!-- Conteúdo principal -->
-        <div class="main">
-            <div class="section-container">
-                <h2>Investindo na Poupança</h2>
-                <p>A poupança é uma forma de investimento oferecida por bancos que oferece liquidez diária e isenção de imposto de renda para pessoas físicas. Embora seja uma opção de investimento conservadora, sua rentabilidade pode ser baixa em comparação com outras alternativas de renda fixa.</p>
+        <div class="calculator-container">
+            <h3>Calculadora de Juros Compostos</h3>
+            <div class="input-group">
+                <label for="initial-amount" class="form-label">Montante Inicial:</label>
+                <input type="number" id="initial-amount" min="0" required class="form-control">
             </div>
-            <div class="calculator-container">
-                <h3>Calculadora de Juros Compostos</h3>
-                <div class="input-group">
-                    <label for="initial-amount">Montante Inicial:</label>
-                    <input type="number" id="initial-amount" min="0" required>
-                </div>
-                <div class="input-group">
-                    <label for="annual-interest-rate">Taxa de Juros Anual (%):</label>
-                    <input type="number" id="annual-interest-rate" min="0" step="0.01" required>
-                </div>
-                <div class="input-group">
-                    <label for="investment-period">Período de Investimento (anos):</label>
-                    <input type="number" id="investment-period" min="0" step="1" required>
-                </div>
-                <button onclick="calculate()">Calcular</button>
-                <div class="result" id="result"></div>
+            <div class="input-group">
+                <label for="annual-interest-rate" class="form-label">Taxa de Juros Anual (%):</label>
+                <input type="number" id="annual-interest-rate" min="0" step="0.01" required class="form-control">
             </div>
+            <div class="input-group">
+                <label for="investment-period" class="form-label">Período de Investimento (anos):</label>
+                <input type="number" id="investment-period" min="0" step="1" required class="form-control">
+            </div>
+            <button onclick="calculate()" class="btn btn-primary">Calcular</button>
+            <div class="result" id="result"></div>
         </div>
-    </body>
-    </html>
+    </div>
+</body>
+</html>
+
