--- a/Linvest/Suporte/suporte.html
+++ b/Linvest/Suporte/suporte.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suporte - Linvest</title>
+    <!-- Adicionando o Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <header>
         <h1>Suporte - Linvest</h1>
     </header>
@@ -19,35 +22,42 @@
         <button class="te"><a href="../Teste de QI/qi.html" id="te">Teste de Investidor</a></button>
     </div>
     <!-- Conteúdo principal -->
-    <div class="main">
-        <div class="section-container">
-            <h2>Deixe seu feedback</h2>
-            <p>Por favor, selecione sua satisfação com o serviço em uma escala de 1 a 10:</p>
-            <form action="submit_feedback.php" method="post">
-                
-                    <option value="-">Selecione uma opção</option>
-                    <option value="1">1 - Ruim</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5 - Neutro</option>
-                    <option value="6">6</option>
-                    <option value="7">7</option>
-                    <option value="8">8</option>
-                    <option value="9">9</option>
-                    <option value="10">10 - Muito satisfeito</option>
-                </select>
-                <input type="submit" value="Enviar Feedback">
-            </form>
-        </div>
-        <div class="section-container">
-            <h2>Envie uma mensagem</h2>
-            <p>Se você tem alguma dúvida ou precisa de suporte, sinta-se à vontade para nos enviar uma mensagem:</p>
-            <form action="submit_message.php" method="post">
-                <textarea id="message" name="message" rows="5" placeholder="Digite sua mensagem aqui..." required></textarea>
-                <input type="submit" value="Enviar Mensagem">
-            </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="section-container">
+                    <h2>Deixe seu feedback</h2>
+                    <p>Por favor, selecione sua satisfação com o serviço em uma escala de 1 a 10:</p>
+                    <form action="submit_feedback.php" method="post">
+                        <select name="satisfaction" id="satisfaction" required>
+                            <option value="">Selecione uma opção</option>
+                            <option value="1">1 - Ruim</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5 - Neutro</option>
+                            <option value="6">6</option>
+                            <option value="7">7</option>
+                            <option value="8">8</option>
+                            <option value="9">9</option>
+                            <option value="10">10 - Muito satisfeito</option>
+                        </select>
+                    </form>
+                </div>
+                <div class="section-container">
+                    <h2>Envie uma mensagem</h2>
+                    <p>Se você tem alguma dúvida ou precisa de suporte, sinta-se à vontade para nos enviar uma mensagem:</p>
+                    <form action="submit_message.php" method="post">
+                        <textarea id="message" name="message" rows="5" placeholder="Digite sua mensagem aqui..." required></textarea>
+                        <button class="primary-button" type="submit" onclick="this.disabled=true;this.form.submit(); this.form.action=''; this.form.submit(); event.preventDefault(); var retVal = confirm('Enviado! Deseja voltar para a página original?'); if( retVal == true ){ window.location.href = '../PRINCIPAL/principal.html'; } else { window.location.href = '../Suporte/suporte.html'; }" value="Enviar Mensagem">ENVIAR</button>
+
+                           
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
+</div>
 </body>
 </html>
+
