--- a/Linvest/etfs/etfs.html
+++ b/Linvest/etfs/etfs.html
@@ -4,52 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ETFs - Linvest</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <style>
-
+        @media (max-width: 576px) {
+            .section-container {
+                padding: 20px;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>ETFs - Linvest</h1>
+        <h1 class="text-center">ETFs - Linvest</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
-    <button class="nav-btn" onclick="toggleNav()">☰</button>
+    <button class="nav-btn" onclick="toggleNav()" >☰</button>
     <!-- Menu de navegação lateral -->
     <div id="mySidenav" class="sidenav">
         <script src="./etfs.js"></script>
         <link rel="stylesheet" href="etfs.css">
-        <link rel="stylesheet" href="etfs.html">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
-        <a href="../PRINCIPAL/principal.html">Início</a>
-        <a href="../Teste de QI/qi.html">Teste de QI</a>
-        <a href="../Suporte/suporte.html">Suporte</a>
+        <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
+        <button class="ves"><a href="../Teste de QI/qi.html" id="ves" >Teste de Investidor</a></button>
+        <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
     </div>
     <!-- Conteúdo principal -->
-    <div class="main">
+    <div class="container">
         <div class="section-container">
-            <h2>Investindo em ETFs</h2>
+            <h2 class="text-center">Investindo em ETFs</h2>
             <p>ETFs (Exchange Traded Funds) são fundos de investimento negociados na bolsa de valores que replicam índices de mercado, como o Ibovespa. Eles permitem que os investidores diversifiquem seus investimentos com baixo custo, pois são negociados em pregão como ações.</p>
         </div>
         <div class="calculator-container">
-            <h3>Calculadora de Juros Compostos</h3>
+            <h3 class="text-center">Calculadora de Juros Compostos</h3>
             <div class="input-group">
-                <label for="initial-amount">Montante Inicial:</label>
-                <input type="number" id="initial-amount" min="0" required>
+                <label for="initial-amount" class="form-label">Montante Inicial:</label>
+                <input type="number" id="initial-amount" min="0" required class="form-control">
             </div>
             <div class="input-group">
-                <label for="annual-interest-rate">Taxa de Juros Anual (%):</label>
-                <input type="number" id="annual-interest-rate" min="0" step="0.01" required>
+                <label for="annual-interest-rate" class="form-label">Taxa de Juros Anual (%):</label>
+                <input type="number" id="annual-interest-rate" min="0" step="0.01" required class="form-control">
             </div>
             <div class="input-group">
-                <label for="investment-period">Período de Investimento (anos):</label>
-                <input type="number" id="investment-period" min="0" step="1" required>
+                <label for="investment-period" class="form-label">Período de Investimento (anos):</label>
+                <input type="number" id="investment-period" min="0" step="1" required class="form-control">
             </div>
-            <button onclick="calculate()">Calcular</button>
+            <button onclick="calculate()" class="btn btn-primary">Calcular</button>
             <div class="result" id="result"></div>
         </div>
         <!-- Exibição da taxa de juros anual -->
         <div class="annual-interest-rate">
-            <p>Taxa de Juros Anual Atual: 5%</p>
+            <p class="text-center">Taxa de Juros Anual Atual: 5%</p>
         </div>
     </div>
 </body>
