--- a/Linvest/PRINCIPAL/principal.html
+++ b/Linvest/PRINCIPAL/principal.html
@@ -53,27 +53,27 @@
     </div>
     <!-- Conteúdo principal -->
     <div class="main">
-      <div class="row">
-          <div class="col-12" id="container1" style="text-align: center">
-              <h2 style="display: inline-block" id="Investimentos-texto">Investimentos</h2>
-              <p style="display: inline-block">Nossa equipe reuniu informações sobre oportunidades de investimento para ajudá-lo a tomar decisões informadas sobre onde investir seu dinheiro.</p>
-              <ul>
-                  <h5>CDB</h5>
-                  <h5>Poupança</h5>
-                  <h5>ETFs</h5>
-              </ul>
-              <p style="display: inline-block">Cada seção fornece uma visão geral do tipo de investimento, seus benefícios e riscos.</p>
-          </div>
-          <div class="col-12" id="container2" style="text-align: center">
-              <h2 style="display: inline-block" id="teste-texto">Projete seu tipo de Investidor</h2>
-              <p style="display: inline-block">Teste seus conhecimentos sobre investimentos com nosso Projeto de Investidor. Responda a uma série de perguntas para avaliar seu entendimento sobre os princípios básicos e avançados de investimento.</p>
-          </div>
-          <div class="col-12" id="container3" style="text-align: center">
-              <h2 style="display: inline-block" id="suporte-texto">Suporte</h2>
-              <p style="display: inline-block">Precisa de ajuda? Entre em contato com nossa equipe de suporte para obter assistência personalizada. Estamos aqui para responder às suas perguntas e orientá-lo em sua jornada de investimento.</p>
-          </div>
-      </div>
-  </div>
-  
+        <div class="row">
+            <div class="col-12" id="container1" style="text-align: center">
+                <h2 id="Investimentos-texto">Investimentos</h2>
+                <p>Nossa equipe reuniu informações sobre oportunidades de investimento para ajudá-lo a tomar decisões informadas sobre onde investir seu dinheiro.</p>
+                <ul>
+                    <h5>CDB</h5>
+                    <h5>Poupança</h5>
+                    <h5>ETFs</h5>
+                </ul>
+                <p>Cada seção fornece uma visão geral do tipo de investimento, seus benefícios e riscos.</p>
+            </div>
+            <div class="col-12" id="container2" style="text-align: center">
+                <h2 id="teste-texto">Projete seu tipo de Investidor</h2>
+                <p>Teste seus conhecimentos sobre investimentos com nosso Projeto de Investidor. Responda a uma série de perguntas para avaliar seu entendimento sobre os princípios básicos e avançados de investimento.</p>
+            </div>
+            <div class="col-12" id="container3" style="text-align: center">
+                <h2 id="suporte-texto">Suporte</h2>
+                <p>Precisa de ajuda? Entre em contato com nossa equipe de suporte para obter assistência personalizada. Estamos aqui para responder às suas perguntas e orientá-lo em sua jornada de investimento.</p>
+            </div>
+        </div>
+    </div>
+    
 </body>
 </html>
