--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -18,7 +18,7 @@
         <script src="./qi.js"></script>
         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
         <button class="ves"><a href="../Investimentos/investimentos.html" id="ves">Investimentos</a></button>
-        <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
+        <button class="su"><a href="../Suporte/suporte.html" style="z-index: 1;" id="su">Suporte</a></button>
     </div>
     <div class="content">
         <form id="quizForm">
