--- a/Linvest/Investimentos/investimentos.html
+++ b/Linvest/Investimentos/investimentos.html
@@ -21,7 +21,7 @@
         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
         <button class="ves"><a href="../Teste de QI/qi.html" id="ves">Teste de Investidor</a></button>
         <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
-        
+        <button class="sobre"><a href="../sobre nós/sobre.html" id="su">Sobre nós</a></button>
     </div>
     
     <!-- Conteúdo principal -->
