--- a/Linvest/PRINCIPAL/principal.html
+++ b/Linvest/PRINCIPAL/principal.html
@@ -22,6 +22,7 @@
         <button class="bu"><a href="../Investimentos/investimentos.html" style="z-index: 1;" id="in" >Investimentos</a></button>
         <button class="te"><a href="../Teste de QI/qi.html" style="z-index: 1;" id="te">Teste de Investidor</a></button>
         <button class="su"><a href="../Suporte/suporte.html" style="z-index: 1;" id="su">Suporte</a></button>
+        <button class="sobre"><a href="../sobre nós/sobre.html" id="su">Sobre nós</a></button>
     </div>
     <div class="container py-5" id="principal" style="position: relative; z-index: 0;">
         <div id="ads" class="carousel slide carousel-fade" data-bs-ride="carousel" style="position: relative; z-index: 0;">
