--- a/Linvest/Suporte/suporte.html
+++ b/Linvest/Suporte/suporte.html
@@ -20,6 +20,7 @@
         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
         <button class="ves"><a href="../Investimentos/investimentos.html" id="ves">Investimentos</a></button>
         <button class="te"><a href="../Teste de QI/qi.html" id="te">Teste de Investidor</a></button>
+        <button class="sobre"><a href="../sobre nós/sobre.html" id="su">Sobre nós</a></button>
     </div>
     <!-- Conteúdo principal -->
     <div class="container">
