--- a/Linvest/Teste de QI/qi.html
+++ b/Linvest/Teste de QI/qi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Teste de Perfil de Investidor</h1>
+        <h1>Perfil de Investidor e Projeto de vida</h1>
     </header>
     <!-- Botão para abrir o menu de navegação -->
     <button class="nav-btn" onclick="toggleNav()">☰</button>
@@ -19,8 +19,25 @@
         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
         <button class="ves"><a href="../Investimentos/investimentos.html" id="ves">Investimentos</a></button>
         <button class="su"><a href="../Suporte/suporte.html" style="z-index: 1;" id="su">Suporte</a></button>
+        <button class="sobre"><a href="../sobre nós/sobre.html" id="su">Sobre nós</a></button>
     </div>
     <div class="content">
+        <div class="intro">
+            <h2>O que é um Projeto de Vida?</h2>
+            <p>
+                Um projeto de vida é uma maneira de planejar o seu futuro com base nos seus objetivos, valores e desejos pessoais. 
+                Ele envolve definir metas para curto, médio e longo prazo, levando em consideração aspectos como carreira, família, 
+                bem-estar e desenvolvimento pessoal. Entender seu perfil de investidor é crucial, pois ele ajuda a determinar a abordagem 
+                certa para seus investimentos, contribuindo para alcançar suas metas e objetivos financeiros.
+            </p>
+            <h3>Por que conhecer seu Perfil de Investidor?</h3>
+            <p>
+                Conhecer seu perfil de investidor ajuda a identificar a melhor estratégia de investimento para você, equilibrando risco e retorno 
+                de acordo com sua tolerância a riscos, objetivos financeiros e prazo de investimento. Isso pode ser fundamental para garantir que 
+                suas decisões de investimento estejam alinhadas com seu projeto de vida.
+            </p>
+        </div>
+        <hr>
         <form id="quizForm">
             <ol>
                 <li>
