--- a/Linvest/etfs/etfs.html
+++ b/Linvest/etfs/etfs.html
@@ -26,8 +26,7 @@
         <link rel="stylesheet" href="etfs.css">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
-        <button class="ves"><a href="../Teste de QI/qi.html" id="ves" >Teste de Investidor</a></button>
-        <button class="su"><a href="../Suporte/suporte.html" id="su">Suporte</a></button>
+        <button class="su"><a href="http://127.0.0.1:5500/Linvest/Investimentos/investimentos.html" id="su">Voltar</a></button>
     </div>
     <!-- Conteúdo principal -->
     <div class="container">
