--- a/Linvest/Poupança/poupança.html
+++ b/Linvest/Poupança/poupança.html
@@ -24,7 +24,7 @@
          <link rel="stylesheet" href="etfs.css">
          <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
          <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
-         <button class="su"><a href="http://127.0.0.1:5500/Linvest/Investimentos/investimentos.html" id="su">Voltar</a></button>
+         <button class="su"><a href="../Investimentos/investimentos.html" id="su">Voltar</a></button>
         </div>
     <!-- Conteúdo principal -->
     <div class="container">
