--- a/Linvest/cdb/cdb.html
+++ b/Linvest/cdb/cdb.html
@@ -19,7 +19,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <button class="in"><a href="../PRINCIPAL/principal.html" id="in">Início</a></button>
-        <button class="su"><a href="http://127.0.0.1:5500/Linvest/Investimentos/investimentos.html" id="su">Voltar</a></button>
+        <button class="su"><a href="../Investimentos/investimentos.html" id="su">Voltar</a></button>
     </div>
     
     <!-- Conteúdo principal -->
