--- a/Linvest/sobre nós/sobre.html
+++ b/Linvest/sobre nós/sobre.html
@@ -20,6 +20,9 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="toggleNav()">&times;</a>
         <button class="bu"><a href="../PRINCIPAL/principal.html" id="bu">Inicio</a></button>
+        <button class="ves"><a href="../Investimentos/investimentos.html" style="z-index: 1;" id="in" >Investimentos</a></button>
+        <button class="te"><a href="../Teste de QI/qi.html" style="z-index: 1;" id="te">Teste de Investidor</a></button>
+        <button class="su"><a href="../Suporte/suporte.html" style="z-index: 1;" id="su">Suporte</a></button>
     </div>
 
     <div class="container py-5">
